--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,50 @@
+/* переменная #2196F3 */
+:root {
+    --brand-blue-color: #2196F3;
+    --backgr-color: #2F303A;
+    --font-color:#212121;
+}
+body{
+font-family: 'Roboto', sans-serif;
+}
+
 .link{
 text-decoration: none;
 }
+
 .list{
-    list-style: none;
+list-style: none;
+}
+
+.logo, .logo-footer{
+font-family: "Raleway", sans-serif;
+color: var(--font-color);
+font-style: normal;
+font-weight: bold;
+font-size: 26px;
+line-height: 31px;
+letter-spacing: 0.03em;
+}
+.logo-footer{
+color: #ffffff;
+}
+.logo>span, .logo-footer>span {
+color: var(--brand-blue-color);
+}
+
+.navigation-link{
+font-style: normal;
+font-weight: 500;
+font-size: 14px;
+line-height: 16px;
+letter-spacing: 0.02em;
+color: var(--font-color);                                    
+}
+
+.navigation-link:hover, .navigation-link:focus{
+color: var(--brand-blue-color);
+}
+
+.footer, .hero{
+background-color: var(--backgr-color);
 }
