--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-/* переменная #2196F3 */
 :root {
     --brand-color: #2196F3;
     --brand-color-hover:#188CE8;
@@ -85,7 +84,8 @@ color: var(--main-light-color);
     font-weight: bold;
     font-size: 16px;
     line-height: 1.88;
-    color: var(--main-light-color);   
+    color: var(--main-light-color); 
+    cursor: pointer;  
     }
 .button-hero:hover, .button-hero:focus{
     background: var(--brand-color-hover);
@@ -175,6 +175,7 @@ font-family: inherit;
 background: var(--backgr-color-section);
 border-radius: 4px;
 border: none;
+cursor: pointer;
 }
 .portfolio-button:hover, .portfolio-button:focus{
 background: var(--brand-color-hover);
